Update Twitter logo Use "X (formerly Twitter)" Fixes https://github.com/Strategy11/business-directory-premium/issues/187 Even out social icon spacing and vertical alignment Rename a few social site settings Fixes https://github.com/Strategy11/business-directory-premium/issues/186

--- a/assets/css/less/wpbdp.less
+++ b/assets/css/less/wpbdp.less
@@ -307,7 +307,9 @@ form#wpbdmsearchform a.advanced-search-link {
 .single-wpbdp_listing .social-fields,
 .wpbdp-listing .social-fields {
 	margin: 20px 0;
-	vertical-align: top;
+	display: flex;
+    align-items: center;
+	gap: 10px;
 }
 
 .social-field-link,
@@ -315,7 +317,6 @@ form#wpbdmsearchform a.advanced-search-link {
 .wpbdp-listing .social-field {
 	display: inline-block;
 	height: 20px;
-	margin-right: 10px;
 	vertical-align: text-top;
 
 	iframe {
@@ -327,7 +328,7 @@ form#wpbdmsearchform a.advanced-search-link {
 	}
 
 	.social-icon {
-		display: inline-block;
+		display: inline-flex;
 		background-color: transparent;
 		color: #1a1a1a;
 	}
@@ -338,6 +339,8 @@ form#wpbdmsearchform a.advanced-search-link {
 
 	a {
 		box-shadow: none;
+		display: flex;
+		align-items: center;
 
 		img {
 			width: auto;
